Added geoJson position route and updated doc
